chore: Update profiles.clj